added WebSecurityConfig, MvcConfig, Controllers & templates, login works with redirect to home

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# DDL generation
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.main.allow-circular-references=true
+spring.main.allow-bean-definition-overriding=true
