fixed bug in deleteCourse that caused crash, ui and usability improvements, cleaned up project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-#datasource configurations
+# Datasource configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/ischedule?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA configurations
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Additional configurations
 spring.main.allow-circular-references=true
 spring.main.allow-bean-definition-overriding=true
